Small update
small fix for some little things